<resources>
    <string name="app_name">Algorand Wallet</string>
    <string name="create_account">Create Account</string>
    <string name="recover_from_passphrase">Recover from Passphrase</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="choose_passcode">Choose passcode</string>
    <string name="choose_a_six_digit">Choose a six digit passcode</string>
    <string name="we_recommend_this_for_improved_security">We recommend this for improved\nsecurity</string>
    <string name="yes">Yes</string>
    <string name="please_scan_your_fingerprint_or">Please scan your fingerprint or your face to proceed.</string>
    <string name="cancel">Cancel</string>
    <string name="new_account">New Account</string>
    <string name="back_up_passphrase">Back Up passphrase</string>
    <string name="share">Share</string>
    <string name="ensure_that_you_backup">Ensure that you back up this account passphrase. This is the only way to recover your Algorand account.</string>
    <string name="share_via">Share via</string>
    <string name="ok">OK</string>
    <string name="question_format">Question %1$d of %2$d</string>
    <string name="select_passphrase_format">Select the %1$s word of your passphrase</string>
    <string name="verify_recovery_phrase">Verify Recovery Phrase</string>
    <string name="next">Next</string>
    <string name="please_name_your_account">Please name your account</string>
    <string name="account_name">Account Name</string>
    <string name="participant_name">Participant Name</string>
    <string name="passphrase_verified">Passphrase Verified</string>
    <string name="your_passphrase_has_been_verified">Your passphrase has been verified. Make sure that you have backed it up as you will need it to recover your account.</string>
    <string name="verify_passcode">Verify Passcode</string>
    <string name="enter_the_same_six_digits">Enter the same six digits</string>
    <string name="name">Name</string>
    <string name="verify">Verify</string>
    <string name="close">Close</string>
    <string name="account_verified">Account Verified</string>
    <string name="account_verified_message">Welcome to <annotation type="bold">Algorand!</annotation>\nYour account is ready to use.</string>
    <string name="accounts">Accounts</string>
    <string name="settings">Settings</string>
    <string name="history">History</string>
    <string name="contacts">Contacts</string>
    <string name="enter_passphrase_or_scan_qr">Enter Passphrase or Scan QR</string>
    <string name="passphrase_qr">Passphrase QR</string>
    <string name="search_contacts">Search Contacts</string>
    <string name="send">Send</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="enter_address">Enter Address</string>
    <string name="preview">Preview</string>
    <string name="preview_and_sign_with">Preview and sign with ledger</string>
    <string name="fee">Fee</string>
    <string name="amount">Amount</string>
    <string name="transaction_id">Transaction ID</string>
    <string name="add_contact">Add Contact</string>
    <string name="contact_name">Contact Name</string>
    <string name="paste_hash_or_scan_qr">Paste # or Scan QR</string>
    <string name="contact_info">Contact Info</string>
    <string name="edit_contact">Edit Contact</string>
    <string name="scan_qr">Scan QR</string>
    <string name="request">Request</string>
    <string name="view_passphrase">View Passphrase</string>
    <string name="edit_account_name">Edit Account Name</string>
    <string name="remove_account">Remove Account</string>
    <string name="copied_to_clipboard">Copied to Clipboard</string>
    <string name="you_are_about_to_remove_an_account">You are about to remove an account. Are you sure you want to proceed with this choice?</string>
    <string name="remove">Remove</string>
    <string name="enter_six_digit_pin">Enter six digit pin</string>
    <string name="wrong_password">Wrong Password</string>
    <string name="password_did_not_match_with_previous_password">Password did not match with previous password.</string>
    <string name="account_to_be_sent_must_not_be_blank">Account to be sent must not be blank.</string>
    <string name="account_must_be_selected">Account must be selected.</string>
    <string name="node_settings">Node Settings</string>
    <string name="language">Language</string>
    <string name="set_change_password">Set/Change Password</string>
    <string name="enable_face_id">Enable Face ID/Touch</string>
    <string name="enable_face_id_touch_id">Enable Face ID/Touch ID</string>
    <string name="select_the_node">Select the Node</string>
    <string name="key">Key</string>
    <string name="an_error_occured">An Error Occurred</string>
    <string name="warning">Warning</string>
    <string name="error">Error</string>
    <string name="passphrase_must_not_be_blank">Passphrase must not be blank.</string>
    <string name="account_name_must_not_be_blank">Account name must not be blank.</string>
    <string name="your_passphrase_is_invalid_please">Your passphrase is invalid. Please make sure that you entered correct one.</string>
    <string name="transaction_detail">Transaction Detail</string>
    <string name="none_of_the_active_nodes_seem">None of the active nodes seem to be active. Please make sure you have at least one active node before proceeding.</string>
    <string name="this_account_already_exists">This account already exists.</string>
    <string name="this_participant_already_exists">This participant already exists.</string>
    <string name="delete">Delete</string>
    <string name="round">Round</string>
    <string name="account">Account</string>
    <string name="delete_contact">Delete Contact</string>
    <string name="are_you_sure_you_want_to_delete">Are you sure you want to delete this contact?</string>
    <string name="address">Address</string>
    <string name="participant_address">Participant Address</string>
    <string name="version_format">Version %1$s</string>
    <string name="none_of_your_active_nodes">None of your active nodes are online. Please add or select another node.</string>
    <string name="pending">Pending</string>
    <string name="unknown">unknown</string>
    <string name="enter_six_digit_pin_to_see_passphrase">Enter six digit pin to see passphrase</string>
    <string name="you_should_enter_your_correct_password">You should enter your correct password to display your passphrase</string>
    <string name="wrong_choice">Wrong Choice</string>
    <string name="there_s_no_biometric_registration">There\'s no biometric registration or biometric hardware found on the device</string>
    <string name="you_re_trying_to_send">You\'re trying to send transaction to account whose balance is lesser than minimum balance. The amount must be at least %1$s algos.</string>
    <string name="transaction_amount">Transaction amount results in a balance below the minimum account balance of <annotation replacement="min_balance"> </annotation> algos.</string>
    <string name="transaction_amount_cannot">Transaction amount cannot be more than your available amount.</string>
    <string name="transaction_amount_results">Transaction amount results in a negative balance.</string>
    <string name="dollar_value">Dollar Value</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="note">Note</string>
    <string name="what_s_on_your_mind">What\'s on your mind?</string>
    <string name="email">Email</string>
    <string name="type_of_feedback">Type of feedback</string>
    <string name="rewards">Rewards</string>
    <string name="show_rewards">Show Rewards</string>
    <string name="category">Category</string>
    <string name="max">Max</string>
    <string name="you_earn_rewards_just">You earn rewards just by owning Algos!\nHere’s a summary of your rewards activity since your last transaction. These rewards are always included in your balance.</string>
    <string name="since_last_transaction">Since Last Transaction</string>
    <string name="for_more_information">For more information on Algorand\nRewards, visit our <annotation custom="faq_color"><annotation type="bold">FAQ</annotation></annotation></string>
    <string name="reward">Reward</string>
    <string name="account_to_be_sent_must_have_58">Account to be sent must have 58 characters long public key.</string>
    <string name="category_must_be_selected">Category must be selected before sending feedback.</string>
    <string name="note_must_not_be_blank">Note must not be blank.</string>
    <string name="notifications">Notifications</string>
    <string name="the_internet_connection">The internet connection appears to be offline.</string>
    <string name="confirmed">Confirmed</string>
    <string name="status">Status</string>
    <string name="your_account_is_about">Your account is about to be deleted, are you sure you want to proceed?</string>
    <string name="to_keep_an_account_open">To keep an account open, the account must have at least 0.01 ALGO. If you send the max amount, the account will be deleted and your active participation keys will be deleted as well.</string>
    <string name="in_order_to_delete">In order to delete an account, you must empty any asset account balance and destroy any asset you\'ve created, if any.</string>
    <string name="proceed">Proceed</string>
    <string name="remove_assets">Remove Assets</string>
    <string name="asset">Asset</string>
    <string name="assets">Assets</string>
    <string name="send_format">Send %1$s</string>
    <string name="receive_title_format">Receive %1$s</string>
    <string name="asset_must_be_selected">Asset must be selected.</string>
    <string name="you_dont_have_any">You don\'t have any account with this asset. Add asset before continue.</string>
    <string name="add_asset_fee">Add Asset Fee</string>
    <string name="select_sending_account">Select Sending Account</string>
    <string name="select_receiving_account">Select Receiving Account</string>
    <string name="unnamed">Unnamed</string>
    <string name="entered_address_is_not_valid">Entered address is not valid.</string>
    <string name="an_error_more">Error occurred while fetching more. Try again later.</string>
    <string name="search_assets_id">Search Assets ID or Name</string>
    <string name="no_asset_found">No Asset Found</string>
    <string name="you_already_have">You already own this asset.</string>
    <string name="adding_asset">Adding Asset</string>
    <string name="removing_asset">Removing Asset</string>
    <string name="to_remove_the_balance"><![CDATA[To remove <b>%1$s</b>, the balance must be 0. Please transfer the balance to another account and try again.]]></string>
    <string name="you_are_about_to"><![CDATA[You are about to remove <b>%1$s</b> from <b>%2$s</b>. You will not be able to transact with this asset until you re-enable it.]]></string>
    <string name="adding_an_asset">Adding an asset requires sending a transaction with a minimum transaction fee. This will appear on your transaction history.</string>
    <string name="unfortunately_this_account">Unfortunately, this account has not added this asset. Please instruct the account owner to add the asset, and then try again.</string>
    <string name="done">Done</string>
    <string name="participants">Participants</string>
    <string name="number_of_required">Number of Required Transaction Signatures</string>
    <string name="participant_name_optional">Participant Name (Optional)</string>
    <string name="the_number_of">The number of participants may be different from the number of signatures required to verify an account. This allows for the creation of majority-ruled accounts.</string>
    <string name="name_the_participant_to">Name the participant to easily identify it while using the Algorand Wallet. These names are stored locally, and can only be seen by you.</string>
</resources>