<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2019 Algorand, Inc.
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rootConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false">

        <TextView
            android:id="@+id/labelTextView"
            style="@style/TextAppearance.Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/input_label_horizontal_margin"
            android:layout_marginTop="20dp"
            android:maxLength="@integer/account_name_character_limit"
            android:text="@string/participant_name_optional"
            app:layout_constraintStart_toStartOf="@+id/nameEditText"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/keyline_1"
            android:layout_marginTop="@dimen/input_label_vertical_margin"
            android:hint="@string/participant_name"
            android:maxLength="@integer/account_name_character_limit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/labelTextView" />

        <TextView
            android:id="@+id/accountSelectionDivider"
            style="@style/TextAppearance.Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/input_label_horizontal_margin"
            android:layout_marginTop="@dimen/smallshadow_bottom_margin_20dp"
            android:text="@string/participant_address"
            app:layout_constraintStart_toStartOf="@id/addressInfoView"
            app:layout_constraintTop_toBottomOf="@id/nameEditText" />

        <com.algorand.android.customviews.AddressInfoView
            android:id="@+id/addressInfoView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/smallshadow_start_20dp_margin"
            android:layout_marginTop="@dimen/input_label_vertical_margin"
            android:layout_marginEnd="@dimen/smallshadow_end_20dp_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/accountSelectionDivider" />

        <TextView
            android:id="@+id/descriptionTextView"
            style="@style/TextAppearance.Label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/name_the_participant_to"
            android:layout_marginHorizontal="@dimen/page_horizontal_spacing"
            android:layout_marginTop="@dimen/smallshadow_bottom_margin_20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/addressInfoView" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/previewButton"
            style="@style/UnelevatedButton.General"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="@dimen/bottom_safe_area_margin"
            android:text="@string/done"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/descriptionTextView"
            app:layout_constraintVertical_bias="0" />

        <include
            android:id="@+id/blockerLoading"
            layout="@layout/layout_loading_blocker" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
