<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2019 Algorand, Inc.
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License
  -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/participantCounterTextView"
            style="@style/TextAppearance.Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/input_label_horizontal_margin"
            android:layout_marginTop="20dp"
            android:text="@string/participants"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="@id/participantCounterLayout"
            app:layout_constraintTop_toTopOf="parent" />


        <ScrollView
            android:id="@+id/participantCounterLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/input_horizontal_20dp_margin"
            android:layout_marginTop="@dimen/input_label_vertical_margin"
            android:layout_marginEnd="@dimen/input_horizontal_20dp_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/participantCounterTextView">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <include layout="@layout/item_participant_header" />
                <include layout="@layout/item_participant_body" />
                <include layout="@layout/item_participant_body" />
                <include layout="@layout/item_participant_body" />
                <include layout="@layout/item_add_participant" />


            </LinearLayout>

        </ScrollView>

        <TextView
            android:id="@+id/signatureCounterTextView"
            style="@style/TextAppearance.Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/input_label_horizontal_margin"
            android:text="@string/number_of_required"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="@id/signatureCounterLayout"
            app:layout_constraintTop_toBottomOf="@id/participantCounterLayout" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/signatureCounterLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/input_horizontal_20dp_margin"
            android:layout_marginTop="@dimen/input_label_vertical_margin"
            android:layout_marginEnd="@dimen/input_horizontal_20dp_margin"
            android:background="@drawable/bg_note"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signatureCounterTextView">

            <include
                layout="@layout/custom_number_picker" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/descriptionTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/page_horizontal_spacing"
            android:layout_marginTop="@dimen/smallshadow_bottom_margin_16dp"
            android:fontFamily="@font/publicsans_regular"
            android:text="@string/the_number_of"
            android:textColor="@color/tertiaryTextColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signatureCounterLayout" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/confirmationButton"
            style="@style/UnelevatedButton.General"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/bottom_safe_area_margin"
            android:text="@string/next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descriptionTextView"
            app:layout_constraintVertical_bias="1" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
